# async-image-processing

./: .gitignore  .pre-commit-config.yaml  .python-version  Dockerfile  alembic.ini  compose.yml  docker-compose.yml  pyproject.toml  send.py
alembic/: env.py
alembic/versions/: 502e1ce10d4e_add_minio_key_column_to_images.py  914c152f3a6a_baseline.py
tests/: test_file.py
tests/db/: test_models.py
web/: Dockerfile  Dockerfile.dev
web/app/: file.py  main.py  models.py  settings.py
web/app/db/: engine.py  models.py
web/app/routers/: file_processing.py
web/app/services/: object_store.py
worker/: Dockerfile  Dockerfile.dev  worker.py
