[project]
name = "async-image-processing"
version = "0.1.0"
description = ""
authors = [
    {name = "Ali Naseri",email = "alinaseri.ut@gmail.com"}
]
readme = "README.md"
requires-python = "3.14"
dependencies = [
    "fastapi (>=0.121.2,<0.122.0)",
    "python-magic (>=0.4.27,<0.5.0)"]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
